# quiz-devpro

./: README.md  pyproject.toml
quiz/: settings.py  urls.py
quiz/base/: admin.py  models.py  views.py
quiz/base/migrations/: 0001_initial.py  0002_criacao_aluno.py  0003_auto_20210329_1042.py
quiz/base/static/base/assets/: game.html
quiz/base/templates/base/: classificacao.html  game.html  home.html
