[tool.poetry]
name = "quiz-devpro"
version = "0.1.0"
description = ""
authors = ["wfoschiera <wfoschiera@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
django-admin = "^2.0.1"
Django = "^3.1.7"
flake8 = "^3.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
